# terin

./: Cargo.toml  README.md
examples/: example.rs  test.rs
src/: args.rs  arguments.rs  display.rs  error.rs  info.rs  lib.rs  show.rs
