[package]
name = "terin"
description = "a Rust library for the creation of cli applications"
version = "0.4.1"
edition = "2021"
readme = "README.md"
license = "MIT"

[package.metadata]
title = "TerIn"
default_argument = "placeholder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
colored = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }